# amalgam

./: .gitignore  .nojekyll  ACKNOWLEDGEMENTS.md  AGENTS.md  BUILDING.md  CLAUDE.md  CNAME  DOCS-PLAN.md  LICENSE  MANIFESTO.md  PHILOSOPHY.md  PROJECT-PLAN.md  README.md  REFERENCE-SPEC.md  SAFETY.md  STATUS.md  Z-PUCK-CLARIFICATIONS.md  index.html  manifesto.html  master.sh  philosophy.html  robots.txt  search.json  sitemap.xml
adr/: 002-greg-wade.html  (+32 more)
cad/: README.md  bicycle-tyre.py  build.sh  calibration_tractor_final.stl  config.py  config.py.example  configure.py  maker-coin.py  pyproject.toml  setup.sh  toy-truck.py  toy_tractor.stl  tractor_tire.stl  tractor_v3.py
cad/amalgam/: README.md  __init__.py
cad/amalgam/lib/: __init__.py  brand.py  corner.py  export.py  logo.py  logo_pad.py  stylized_a.py
cad/amalgam/parts/: __init__.py
cad/calibration/: README.md
cad/exports/: README.md
cad/include/: amalgam_logo.py  corner_components.py  list.py
cad/parts/: amalgam_anvil.py  amalgam_fidget_bolt.py  amalgam_maker_coin.py  corner_2.py  corner_front_left.py  corner_motorized.py  corner_standard.py  generate_victory_print.py  toy_tractor.py  toy_tractor_only.scad  toys_tractor.scad  tractor-tyre-2.py  tractor-tyre.py  tractor.py  tractor_tire_extended.py  tractor_tire_fixed.py  tractor_tire_fixed.step  tractor_tire_simple.py  tractor_tire_v3.py  tractor_v2.py  ttyre.py
cad/parts/victory/: amalgam_fidget_bolt.py  amalgam_maker_coin.py
cad/utilities/: README.md  download_calibration.py  export_logo.py  generate_victory_print.py  list.py  tractor-mascot.py
(+187 files in other folders)
