[project]
name = "neo-darwin-cad"
version = "0.1.0"
description = "Neo-Darwin 3D Printer CAD Parts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "build123d>=0.9.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
py-modules = ["parts", "config"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
