[project]
name = "amalgam-cad"
version = "0.1.0"
description = "Amalgam 3D Printer - Parametric CAD Parts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.9.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["amalgam*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
